--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@tailwindcss/vite": "^4.1.3",
+    "countup.js": "^2.8.0",
+    "leaflet": "^1.9.4",
     "tailwindcss": "^4.1.3",
     "typed.js": "^2.1.0",
     "typeit": "^8.8.7"
