--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "countup.js": "^2.8.0",
     "leaflet": "^1.9.4",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.1.3",
     "typed.js": "^2.1.0",
     "typeit": "^8.8.7"
